[project]
name = "demo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "matplotlib>=3.10.7",
    "plotly>=6.3.1",
    "streamlit>=1.52.2",

    # Scraping
    "selenium>=4.18",
    "beautifulsoup4>=4.12",
    "webdriver-manager>=4.0",

    # Data / DB
    "pandas>=2.2",
    "sqlalchemy>=2.0",
]

